A few k8s tweaks
